[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Oponent/Oponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ball/Ball.gd" type="Script" id=4]
[ext_resource path="res://Level/Level.gd" type="Script" id=5]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 524, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 30.25 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_color = Color( 0.894118, 0.494118, 0.105882, 1 )
font_data = ExtResource( 6 )

[node name="Level" type="Node"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.207843, 0.262745, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 19, 300 )

[node name="WallTop" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 510, -10 )
shape = SubResource( 1 )

[node name="WallBot" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBot"]
position = Vector2( 521, 644 )
shape = SubResource( 1 )

[node name="Oponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1008, 300 )
scale = Vector2( 1, 0.7 )

[node name="Ball" parent="." groups=["BallGroup"] instance=ExtResource( 3 )]
position = Vector2( 512, 300 )
script = ExtResource( 4 )

[node name="WallLeft" type="Area2D" parent="."]
position = Vector2( -3, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( -8.5, 312.5 )
scale = Vector2( 1, 10 )
shape = SubResource( 2 )

[node name="WallRight" type="Area2D" parent="."]
position = Vector2( 1047, -5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( -8.5, 312.5 )
scale = Vector2( 1, 10 )
shape = SubResource( 2 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_bottom = -500.0
custom_fonts/font = SubResource( 3 )
text = "0
"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_bottom = -500.0
custom_fonts/font = SubResource( 4 )
text = "0
"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ContDown" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
custom_colors/font_color = Color( 0.831373, 0.478431, 0.219608, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
